updated the yml file

--- a/custom_api/demo_restapi/config/install/rest.resource.list_resource.yml
+++ b/custom_api/demo_restapi/config/install/rest.resource.list_resource.yml
@@ -1,5 +1,5 @@
-id: demo_resource
-plugin_id: demo_resource
+id: list_resource
+plugin_id: list_resource
 granularity: method
 configuration:
   GET:
