changed the uri path

--- a/custom_api/demo_restapi/config/install/rest.resource.Bloglist_resource.yml
+++ b/custom_api/demo_restapi/config/install/rest.resource.Bloglist_resource.yml
@@ -1,5 +1,5 @@
-id: list_resource
-plugin_id: list_resource
+id: Bloglist_resource
+plugin_id: Bloglist_resource
 granularity: method
 configuration:
   GET:
